--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-/target/
-/war/
-/www-test/
-/gwt-unitCache/
-/.idea/
-/.gwt/
-/dependency-reduced-pom.xml
+target/
+war/
+www-test/
+gwt-unitCache/
+.idea/
+.gwt/
+dependency-reduced-pom.xml
+*.iml
+
