--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
         <dependency.jpy.version>0.7.5</dependency.jpy.version>
         <dependency.abcl.version>1.0.1</dependency.abcl.version>
         <dependency.beanshell.version>2.0b5</dependency.beanshell.version>
+        <dependency.xstream.version>1.4.8</dependency.xstream.version>
+        <dependency.xpp3.version>1.1.4c</dependency.xpp3.version>
+        <dependency.xmlpull.version>1.1.3.1</dependency.xmlpull.version>
 
         <!-- Note: GWT needs at least java 1.6 -->
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -76,6 +79,21 @@
             <groupId>net.sf.advanced-gwt</groupId>
             <artifactId>advanced-gwt</artifactId>
             <version>${dependency.advanced-gwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>${dependency.xstream.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>xpp3</groupId>
+            <artifactId>xpp3</artifactId>
+            <version>${dependency.xpp3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>xmlpull</groupId>
+            <artifactId>xmlpull</artifactId>
+            <version>${dependency.xmlpull.version}</version>
         </dependency>
 
         <!-- Jython -->
